--- a/styles.css
+++ b/styles.css
@@ -49,6 +49,8 @@ ul {
     display: flex;
     justify-content:space-around; 
     margin-bottom: 64px;
+    padding-left: 64px;
+    padding-right: 64px;
 }
 .left-hero-text {
     display: flex;
@@ -62,7 +64,7 @@ img {
     height: 200px;
 }
 
-button,
+.signup,
 .box {
     background-color: #3882f6;
 }
@@ -75,6 +77,43 @@ button {
     border-radius: 8px;
 }
 
-.signup2 button {
-    border-color: white;  
+.secondsection {
+    text-align: center;
+}
+
+.container {
+    display: flex;
+    justify-content: space-around;
+}
+
+.thirdsection {
+    background-color: #E5E7EB;
+    padding: 32px 150px;
+    color:#1F2937
+}
+.quote {
+    font-size: 36px;
+    font-style: italic;
+    margin-bottom: 0;
+    font-weight: light;
+}
+
+.signoff {
+    text-align: right;
+    font-size: 18px;
+    font-weight: bold;
+}
+
+.fourthsection {
+    padding: 32px;
+}
+
+.box {
+    border-radius: 16px;
+    display: flex;
+    justify-content: space-around;
+}
+
+.calltoaction {
+   
 }
